hopfuly last text alignment bug fix

--- a/yes-instance/style.css
+++ b/yes-instance/style.css
@@ -3,7 +3,7 @@ body{
 
 margin: 0;
 height: 100vh;
-display: felx;
+display: flex;
 justify-content: center;
 align-items: center;
 
